--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -7,8 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{site.baseurl}}/img/rhiap_nav.png"></span>
+            <a class="navbar-brand" href="{{ site.url }}/">
+                <span><img src="{{site.url}}/img/rhiap_nav.png"></span>
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
