--- a/_includes/archivo_nav.html
+++ b/_includes/archivo_nav.html
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
   <div class="panel panel-default">
 		<div class="panel-heading">
-			{{ section.title }}
+			titulo
 		</div>
   </div>
 </div>
