--- a/_includes/archivo_nav.html
+++ b/_includes/archivo_nav.html
@@ -1,12 +1,14 @@
 <div class="panel panel-primary">
-  <div class="panel-heading">
-    titulo
-  </div>
-  <ul class="list-group">
+  	<div class="panel-heading">
+    		titulo
+  	</div>
+ 	<div class="panel-body">
+  		<ul class="list-group">
         		{% for item in section.docs %}
           			{% assign item_url = item | prepend:"/archivo/" | append:"/" %}
           			{% assign p = site.archivo | where:"url", item_url | first %}
           			<a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ p.url  | prepend: site.baseurl }}">{{ p.title }}</a>
         		{% endfor %}
 		</ul>
+	</div>
 </div>
