--- a/_includes/archivo_nav.html
+++ b/_includes/archivo_nav.html
@@ -1,9 +1,13 @@
 <div class="list-group">
-                <a class="list-group-item active">
-                  Título
-                </a>
-                <a href="#" class="list-group-item">Dapibus ac facilisis in
-                </a>
-                <a href="#" class="list-group-item">Morbi leo risus
-                </a>
+  <a class="list-group-item active">
+    Períodos históricos
+  </a>
+  <a href="#" class="list-group-item">Perú Antiguo
+  </a>
+  <a href="#" class="list-group-item">Virreinal
+  </a>
+  <a href="#" class="list-group-item">Republicano
+  </a>
+  <a href="#" class="list-group-item">Moderno
+  </a>
 </div>
