--- a/_includes/archivo_nav.html
+++ b/_includes/archivo_nav.html
@@ -4,10 +4,10 @@
   </a>
   <a href="https://rhiap.github.io/archivo/peru_antiguo/" class="list-group-item">Perú Antiguo
   </a>
-  <a href="#" class="list-group-item">Virreinal
+  <a href="https://rhiap.github.io/archivo/virreinal/" class="list-group-item">Virreinal
   </a>
-  <a href="#" class="list-group-item">Republicano
+  <a href="https://rhiap.github.io/archivo/republica/" class="list-group-item">Republica
   </a>
-  <a href="#" class="list-group-item">Moderno
+  <a href="https://rhiap.github.io/archivo/moderno/" class="list-group-item">Moderno
   </a>
 </div>
