--- a/_includes/archivo_nav.html
+++ b/_includes/archivo_nav.html
@@ -8,6 +8,6 @@
   </a>
   <a href="https://rhiap.github.io/archivo/republica/" class="list-group-item">Republica
   </a>
-  <a href="https://rhiap.github.io/archivo/moderno/" class="list-group-item">Moderno
+  <a href="https://rhiap.github.io/archivo/contemporaneo/" class="list-group-item">Contemporáneo
   </a>
 </div>
