--- a/_includes/archivo_nav.html
+++ b/_includes/archivo_nav.html
@@ -2,12 +2,12 @@
   <a class="list-group-item active">
     Períodos históricos
   </a>
-  <a href="https://rhiap.github.io/archivo/peru_antiguo/" class="list-group-item">Perú Antiguo
+  <a href="https://historiografiadelarteperuano.github.io/archivo/peru_antiguo/" class="list-group-item">Perú Antiguo
   </a>
-  <a href="https://rhiap.github.io/archivo/virreinal/" class="list-group-item">Virreinal
+  <a href="https://historiografiadelarteperuano.github.io/archivo/virreinal/" class="list-group-item">Virreinal
   </a>
-  <a href="https://rhiap.github.io/archivo/republica/" class="list-group-item">Republica
+  <a href="https://historiografiadelarteperuano.github.io/archivo/republica/" class="list-group-item">Republica
   </a>
-  <a href="https://rhiap.github.io/archivo/contemporaneo/" class="list-group-item">Contemporáneo
+  <a href="https://historiografiadelarteperuano.github.io/archivo/contemporaneo/" class="list-group-item">Contemporáneo
   </a>
 </div>
