--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <p class="text-center">
             {{ site.title }} {{ site.time | date: '%Y' }} |
-            Powered by <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
+            Hecho en la UNMSM con el soporte de <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
