--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
     <div class="container">
 
         <p class="text-center">
-            {{ site.title }} {{ site.time | date: '%Y' }} |
-            Hecho en la UNMSM con el soporte de <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
+            {{ site.title }} {{ site.time | date: '%Y' }} | Desde la UNMSM con el soporte de <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
